# libport

./: .gitignore  LICENSE  build.sh  pom.xml  prepare.sh
docker/: Dockerfile  Dockerfile-centos  direct.sh  install_lib.sh  install_lib_centos.sh  install_proto.sh  rerun.sh  setup_java.sh  setup_java_centos.sh
libport-bin/: pom.xml
libport-core/: TODO  build.sh  pom.xml
libport-core/src/main/native/: .ycm_extra_conf.py  CMakeLists.txt  build.sh  core.cc  debug.sh  integration.sh  log.cc  metadata.cc  metadata_stub.go  serialization.cc  syscall.c  test.sh  test_core.cc  test_integration.cc  test_metadata.cc  test_metadata.sh  test_port_manager.cc  test_safe_metadata.cc  test_serialization.cc  utils.cc
libport-core/src/main/native/client/: CMakeLists.txt  client.cc  latte  membership-2.sh  pio  run  vms
libport-core/src/main/native/common/: CMakeLists.txt  configs.cc  log.cc  utils.cc
libport-core/src/main/native/config/: config.txt
libport-core/src/main/native/data/: config-root.json
libport-core/src/main/native/include/: accessor_object.h  comm.h  config.h  core_manager.h  dispatcher.h  http.h  image.h  libport.h  log.h  manager.h  metadata.h  port-syscall.h  port_manager.h  principal.h  safe.h  server.h  session.h  store.h  utils.h
libport-core/src/main/native/integration_tests/: 50-default.conf  Dockerfile  install_lib.sh  latte_exec  setup_java.sh
libport-core/src/main/native/proto/: CMakeLists.txt  config.h  statement.proto  traits.h  utils.h
libport-core/src/main/native/server/: CMakeLists.txt  core.cc  handlers.cc  main-daemon.cc  main.cc  manager.cc  metadata.cc  server.cc  session.cc
libport-core/src/main/native/store/: CMakeLists.txt  store.cc
libport-core/src/main/native/test-include/: mock-metadata-client.h
libport-core/src/main/native/tests/: CMakeLists.txt  README  test-manager.cc  test-session.cc  test_core.cc  test_metadata.cc  test_port_manager.cc  test_safe.cc  test_safe_metadata.cc
libport-core/src/main/native/tests/legacy-tests/: test_core.cc
libport-core/src/main/native/tools/: debug.sh  direct.sh  force-build.sh  to_docker.sh
libport-java/: assembly.xml  pom.xml
libport-java/src/main/java/org/latte/libport/: Alice.java  Attester.java  LibC.java  LibPort.java  P1.java  PortManager.java  Utils.java
libport-java/src/test/java/org/latte/libport/: PortManagerTest.java
src/main/java/org/latte/portlib/: .Port.java.un~  .PortManager.java.un~  PortManager.java
src/test/java/org/latte/portlib/: AppTest.java  PortManagerTest.java
